--- a/static/password_reset.html
+++ b/static/password_reset.html
@@ -51,7 +51,7 @@
                 <div id="confirmPasswordError" class="error-message"></div>
             </div>
             <div class="form-group">
-                <button type="submit">Submit</button>
+                <button type="submit" id ="click-submit-button">Submit</button>
             </div>
         </form>
         <div id="result"></div>
@@ -65,6 +65,7 @@
         const confirmPasswordInput = document.getElementById('confirmPassword');
         const passwordErrorDiv = document.getElementById('passwordError');
         const confirmPasswordErrorDiv = document.getElementById('confirmPasswordError');
+        const button= document.getElementById('click-submit-button');
 
         // Function to handle form submission
         async function handleFormSubmit(event) {
@@ -112,16 +113,33 @@
                 if (response.ok) {
                     // Password reset successful
                     resultDiv.textContent = responseData.data.message;
+                    resultDiv=resultDiv.style.color="GREEN";
                 } else {
                     // Handle error responses
                     resultDiv.textContent = 'Password reset failed: ' + responseData.message;
+                    resultDiv=resultDiv.style.color="RED";
                 }
             } catch (error) {
                 // Handle network or other errors
                 resultDiv.textContent = 'Password reset failed. Please try again.';
+                resultDiv=resultDiv.style.color="RED";
             }
         }
 
+        
+        window.onload= function(){
+            //check if token is exist in query perameter
+            const currentURL = window.location.href;
+            const url = new URL(currentURL);
+            const queryParams = new URLSearchParams(url.search);
+            const token = queryParams.get('token');
+            if (token == null || token ==undefined && token.length==0){
+                resultDiv.textContent = 'Password reset failed: ' + "invalid request";
+                resultDiv=resultDiv.style.color="RED";
+                button= button.style.visibility='hidden';
+             
+            }
+        }
         // Add form submit event listener
         resetPasswordForm.addEventListener('submit', handleFormSubmit);
     </script>
